CrOS sys tray: fix padding to better match spec

A few changes here:

* Specify padding on both ends of the whole tray separately (instead
  of using space around some tray items to build it up)
* Override the size function for the battery to better match its
  actual visual footprint.
* Specify padding between items with one single number, used at the
  layout level.

This all allows for simpler code while better matching the specs.

Bug: 901989
Change-Id: Ia75dcfc7b355b114e6492c26ee4ce6372af92f71
Reviewed-on: https://chromium-review.googlesource.com/c/1328042
Commit-Queue: Manu Cornet <manucornet@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609183}
Former-commit-id: 35c5e6ff1248c790245768efed78235c32811d8e