ash/system/tray/tray_container.cc
@@ -68,14 +68,8 @@ void TrayContainer::UpdateLayout() {
       is_horizontal ? views::BoxLayout::kHorizontal
                     : views::BoxLayout::kVertical;
 
-  const int hit_region_with_separator =
-      kHitRegionPadding + TrayConstants::separator_width();
-  gfx::Insets insets(
-      is_horizontal
-          ? gfx::Insets(0, kHitRegionPadding, 0, hit_region_with_separator)
-          : gfx::Insets(kHitRegionPadding, 0, hit_region_with_separator, 0));
-  if (base::i18n::IsRTL())
-    insets.Set(insets.top(), insets.right(), insets.bottom(), insets.left());
+  gfx::Insets insets(is_horizontal ? gfx::Insets(0, kHitRegionPadding)
+                                   : gfx::Insets(kHitRegionPadding, 0));
   SetBorder(views::CreateEmptyBorder(insets));
 
   int horizontal_margin = main_axis_margin_;
